Componente horario finalizado

--- a/src/css/Horario.css
+++ b/src/css/Horario.css
@@ -1,6 +1,6 @@
 .week-grid {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin: 20px;
 }
 
@@ -42,7 +42,7 @@ input {
   margin: 0;
 }
 
-.btn-crear {
+.btn-peticion {
   background-color: rgb(35, 34, 47);
   border-color: rgb(35, 34, 47);
   color: white;
@@ -52,14 +52,87 @@ input {
   border: 0px;
 }
 
-.btn-crear:hover,
-.btn-crear:active,
-.btn-crear:focus {
+.btn-peticion:hover,
+.btn-peticion:active,
+.btn-peticion:focus {
   background-color: rgba(35, 34, 47, 0.759);
   border-color: rgba(35, 34, 47, 0.759);
 }
 
-.btn-crear:disabled {
+.btn-peticion:disabled {
   background-color: rgba(35, 34, 47, 0.759);
   border-color: rgba(35, 34, 47, 0.759);
+}
+
+.btn-crear {
+  width: 100%;
+  background-color: rgb(65, 65, 158);
+  border-color: rgb(65, 65, 158);
+  color: white;
+  border-radius: 4px;
+  border-color: rgb(65, 65, 158);
+  transition-duration: 0.3s;
+  border: 0px;
+}
+
+.btn-crear:hover,
+.btn-crear:active,
+.btn-crear:focus {
+  background-color: rgba(65, 65, 158, 0.759);
+  border-color: rgba(65, 65, 158, 0.759);
+}
+
+.btn-crear:disabled {
+  background-color: rgba(65, 65, 158, 0.759);
+  border-color: rgba(65, 65, 158, 0.759);
+}
+
+.btn-cancelar {
+  width: 100%;
+  background-color: rgb(162, 45, 69);
+  border-color: rgb(162, 45, 69);
+  color: white;
+  border-radius: 4px;
+  border-color: rgb(162, 45, 69);
+  transition-duration: 0.3s;
+  border: 0px;
+}
+
+.btn-cancelar:hover,
+.btn-cancelar:active,
+.btn-cancelar:focus {
+  background-color: rgba(162, 45, 69, 0.759);
+  border-color: rgba(162, 45, 69, 0.759);
+}
+
+.btn-cancelar:disabled {
+  background-color: rgba(162, 45, 69, 0.759);
+  border-color: rgba(162, 45, 69, 0.759);
+}
+
+.etiqueta-dia {
+  border: 2px solid;
+  border-radius: 5px;
+  border-color: rgb(35, 34, 47, 0.6);
+  color: rgb(35, 34, 47);
+  font-size: 20px;
+  background-color: rgb(35, 34, 47, 0.05);
+  font-weight: bold;
+}
+
+.columna-dia {
+  border: 1px solid;
+  border-radius: 10px;
+  border-color: rgb(35, 34, 47, 0.2);
+  background-color: rgb(35, 34, 47, 0.1);
+}
+
+.formularioTurno {
+  background-color: rgb(35, 34, 47, 0.1);
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  border: 1px solid;
+  border-radius: 5px;
+  margin-top: 5px;
 }
