--- a/src/css/clase.css
+++ b/src/css/clase.css
@@ -15,6 +15,18 @@
   );
 }
 
+.contenedor-fluid-3 {
+  padding: 10px;
+  border: 5px double gray;
+  border-radius: 15px;
+  box-shadow: 2px 2px 5px black;
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 1) 10%,
+    rgba(65, 65, 158, 0.2) 100%
+  );
+}
+
 .contenedor-datos {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -34,8 +46,166 @@
   padding: 5px 10px 5px 10px;
 }
 
+.modificar-clase {
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(65, 65, 158, 0.2) 70%
+  );
+  border: 1px solid;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.75);
+  padding: 10px;
+}
+
+.descripcion-clase {
+  padding: 30px;
+  white-space: pre-line;
+  word-wrap: break-word;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 90%,
+    rgba(65, 65, 158, 0.2) 100%
+  );
+  border: 1px solid;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.75);
+}
+
+.detalles-clase {
+  padding: 20px;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 90%,
+    rgba(65, 65, 158, 0.2) 100%
+  );
+  border: 1px solid;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.75);
+}
+
+.valoracion {
+  border: 2px dashed black;
+  box-shadow: 2px 2px 2px black;
+  background: linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 30%,
+    rgba(65, 65, 158, 0.3) 100%
+  );
+  border-radius: 10px;
+  padding: 5px 10px 5px 10px;
+  height: 500px;
+  overflow: auto;
+}
+
+.valoracion-sin-comentarios {
+  border: 2px dashed black;
+  box-shadow: 2px 2px 2px black;
+  background: linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 1) 30%,
+    rgba(65, 65, 158, 0.3) 100%
+  );
+  border-radius: 10px;
+  padding: 5px 10px 5px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
+
+.etiqueta-sin-comentarios {
+  border: 1px solid black;
+  box-shadow: 2px 2px 2px black;
+  background: white;
+  border-radius: 10px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+}
+
+.opinion {
+  background: linear-gradient(
+    360deg,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(65, 65, 158, 0.2) 100%
+  );
+  border: 1px solid;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.75);
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.opinion-autor {
+  background: linear-gradient(
+    360deg,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(226, 188, 17, 0.5) 100%
+  );
+  border: 2px dotted;
+  border-radius: 5px;
+  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.75);
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.nuevo-comentario {
+  border: 2px dashed black;
+  box-shadow: 2px 2px 2px black;
+  background: linear-gradient(
+    315deg,
+    rgba(255, 255, 255, 1) 30%,
+    rgba(65, 65, 158, 0.3) 100%
+  );
+  border-radius: 10px;
+  padding: 5px 10px 5px 10px;
+}
+
+.calificacion {
+  font-weight: bold;
+  font-size: 28px;
+  font-style: italic;
+}
+
+.estrella {
+  color: rgb(35, 34, 47);
+  font-size: 30px;
+}
+
+.marco-calificacion {
+  display: "flex";
+  justify-content: "end";
+}
+
+.columna-opinion {
+  margin-bottom: 0px;
+}
+
+@media (max-width: 991px) {
+  .columna-opinion {
+    margin-bottom: 15px;
+  }
+}
+
 @media (max-width: 767px) {
   .contenedor-datos {
     grid-template-columns: 1fr;
+  }
+
+  .valoracion-sin-comentarios {
+    height: 300px;
+  }
+
+  .etiqueta-sin-comentarios {
+    max-width: 400px;
+    height: 250px;
+    padding: 25px;
   }
 }
