--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,6 +1,154 @@
-.grid-container {
+.boton-grande {
+  display: flex;
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 8px;
+  width: 100%;
+  cursor: pointer;
+  justify-content: space-between;
+  background: linear-gradient(
+    360deg,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(65, 65, 158, 0.2) 100%
+  );
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.75);
+  padding: 25px;
+}
+
+.boton-grande img {
+  max-width: 80;
+  max-height: 80px;
+}
+
+.etiqueta-titulo {
+  font-family: "Monserrat Alternates Regular";
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(35, 34, 47);
+}
+
+.descripcion {
+  display: block;
+  height: 70px;
+  width: 90%;
+  overflow: hidden;
+  word-wrap: break-word;
+  white-space: pre-line;
+}
+
+.comentario-mensaje {
+  display: block;
+  height: 180px;
+  width: 100%;
+  overflow: auto;
+  white-space: pre-line;
+  word-wrap: break-word;
+}
+
+.subtitulo {
+  font-size: 16px;
+  font-weight: regular;
+  font-style: italic;
+  color: gray;
+}
+
+.parrafo {
+  width: 100%;
+  font-size: 18px;
+  font-weight: regular;
+  word-wrap: break-word;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.seccion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  border: 1px solid gray;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px black;
+  width: 100%;
+  background: linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 1) 40%,
+    rgba(65, 65, 158, 0.2) 100%
+  );
+  margin-bottom: 20px;
+}
+
+.titulo-parrafo {
+  text-align: justify;
+  text-justify: inter-word;
+  padding: 0px 15px 0px 15px;
+}
+
+.separador-parrafo {
+  width: 70%;
+}
+
+.etiqueta-info-turno {
+  font-weight: bold;
+}
+
+.boton-turno {
+  display: flex;
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 8px;
+  width: 100%;
+  cursor: pointer;
+  justify-content: space-between;
+  background: linear-gradient(
+    360deg,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(65, 65, 158, 0.2) 100%
+  );
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.75);
+  padding: 25px;
+}
+
+.boton-turno img {
+  max-width: 80;
+  max-height: 80px;
+}
+
+.boton-comentario {
+  color: black;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 8px;
+  width: 100%;
+  cursor: pointer;
+  justify-content: space-between;
+  background: linear-gradient(
+    360deg,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(65, 65, 158, 0.2) 100%
+  );
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.75);
+  padding: 25px;
+}
+
+.grid-turnos {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  justify-items: center;
-  gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
+  grid-gap: 10px;
+  padding: 10px;
+}
+
+@media (max-width: 768px) {
+  .grid-turnos {
+    grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+  }
 }
